feat: product category and product code
